<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/musicBlack">

    <!-- 爱好标题 -->
    <TextView
        android:id="@+id/music_interest_title_tv"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/choose_interest"
        android:textColor="@color/musicWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 爱好列表 -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/music_interest_content_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/music_interest_title_tv">

    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/music_interest_bottom_rl"
        android:layout_width="0dp"
        android:layout_height="360dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="@id/music_interest_content_rv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/music_interest_bottom_bg_v"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@drawable/music_bottom_gradual" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="36dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/music_interest_position_btn"
                android:layout_width="160dp"
                android:layout_height="56dp"
                android:background="@drawable/music_btn_position"
                android:text="@string/done"
                android:textColor="@color/musicWhite"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:gravity="center_vertical"
                android:text="@string/skip"
                android:textColor="@color/musicWhite"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>